# libre-6502

./: README.md  meson.build
include/: addressing.h  cart.h  cartridge.h  computer.h  debug.h  decoder.h  definitions.h  disassembler.h  emulator.h  ppu.h  processor.h  reader.h
include/cpu/: addressing.h  decoder.h  definitions.h  processor.h
include/picture/: bus.h  ppu.h  registers.h  screen.h
src/: addressing.c  cart.c  cartridge.c  computer.c  debug.c  decoder.c  disassembler.c  emulator.c  main.c  ppu.c  processor.c  reader.c
src/cpu/: addressing.c  decoder.c  processor.c
src/picture/: bus.c  ppu.c  registers.c  screen.c
test/: adc.c  adc_dec.c  sbc.c  sbc_dec.c  utils.c  utils.h
tests/: test.h  test_adc.c
